tests/urmoac/input/wkt/errors/point_duplicate_id/errors.urmoac
Duplicate object '1000' occured.
Objects could not be loaded.
Quitting on error...
